# iron-boy-advance

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  justfile
.githooks/: pre-push
.github/workflows/: build.yml
arm7tdmi/: Cargo.toml
arm7tdmi/src/: cpu.rs  disassembler.rs  dissassembler.rs  lib.rs  psr.rs
arm7tdmi/src/arm/: disassembler.rs  dissassembler.rs  execute.rs  mod.rs
clients/desktop/: Cargo.toml
clients/desktop/src/: app.rs  emulator.rs  frame.rs  gui.rs  input.rs  lib.rs  logger.rs  main.rs  renderer.rs
clients/desktop/src/shaders/: frame.wgsl
clients/dev/: Cargo.toml
clients/dev/src/: frame.rs  lib.rs  logger.rs  main.rs  window.rs
core/: Cargo.toml
core/src/: bus.rs  gba.rs  lib.rs
core/src/arm7tdmi/: cpu.rs  disassembler.rs  mod.rs  psr.rs  tests.rs
core/src/arm7tdmi/arm/: disassembler.rs  execute.rs  mod.rs
core/src/arm7tdmi/tests/: mod.rs  test_bus.rs
core/src/bios/: mod.rs
core/src/cartridge/: header.rs  mod.rs
core/src/memory/: mod.rs  simple_bus.rs  system_bus.rs
core/src/ppu/: mod.rs
core/src/scheduler/: event.rs  mod.rs
core/src/sharp_sm83/: cpu.rs
cpu/: Cargo.toml
cpu/src/: lib.rs  main.rs  mode.rs  psr.rs
crates/ironboyadvance_arm7tdmi/: Cargo.toml
crates/ironboyadvance_arm7tdmi/src/: alu.rs  arm.rs  barrel_shifter.rs  cpu.rs  disassembler.rs  lib.rs  memory.rs  psr.rs  test.rs  tests.rs  thumb.rs
crates/ironboyadvance_arm7tdmi/src/arm/: block_data_transfer.rs  branch_and_branch_link.rs  branch_and_exchange.rs  data_processing.rs  disassembler.rs  execute.rs  halfword_and_signed_data_transfer.rs  lut.rs  multiply.rs  multiply_long.rs  psr_transfer.rs  single_data_swap.rs  single_data_transfer.rs  software_interrupt.rs  undefined.rs
crates/ironboyadvance_arm7tdmi/src/thumb/: add_offset_to_sp.rs  add_subtract.rs  alu_operations.rs  conditional_branch.rs  disassembler.rs  execute.rs  hi_register_operations_branch_exchange.rs  load_address.rs  load_store_halfword.rs  load_store_immediate_offset.rs  load_store_register_offset.rs  load_store_sign_extended_byte_halfword.rs  long_branch_with_link.rs  lut.rs  move_compare_add_subtract_immediate.rs  move_shifted_register.rs  multiple_load_store.rs  pc_relative_load.rs  push_pop_registers.rs  software_interrupt.rs  sp_relative_load_store.rs  unconditional_branch.rs  undefined.rs
crates/ironboyadvance_core/: Cargo.toml
crates/ironboyadvance_core/src/: bios.rs  cartridge.rs  gba.rs  interrupt_control.rs  io_registers.rs  keypad.rs  lib.rs  memory.rs  ppu.rs  scheduler.rs  system_bus.rs  system_control.rs  timers.rs
crates/ironboyadvance_core/src/bios/: mod.rs
crates/ironboyadvance_core/src/cartridge/: header.rs
crates/ironboyadvance_core/src/ppu/: registers.rs
crates/ironboyadvance_core/src/scheduler/: event.rs
crates/ironboyadvance_sharp_sm83/src/: cpu.rs
crates/ironboyadvance_utils/: Cargo.toml
crates/ironboyadvance_utils/src/: bit.rs  lib.rs
debugger/: Cargo.toml
ironboyadvance_arm7tdmi/: Cargo.toml
ironboyadvance_arm7tdmi/src/: alu.rs  barrel_shifter.rs  cpu.rs  disassembler.rs  exception.rs  lib.rs  memory.rs  psr.rs  tests.rs
ironboyadvance_arm7tdmi/src/arm/: disassembler.rs  execute.rs  lut.rs  mod.rs
ironboyadvance_arm7tdmi/src/tests/: mod.rs  test_bus.rs
ironboyadvance_arm7tdmi/src/thumb/: disassembler.rs  execute.rs  lut.rs  mod.rs
ironboyadvance_core/: Cargo.toml
ironboyadvance_core/src/: gba.rs  interrupt_control.rs  io_registers.rs  lib.rs  system_bus.rs  system_control.rs
ironboyadvance_core/src/bios/: mod.rs
ironboyadvance_core/src/cartridge/: mod.rs
ironboyadvance_sharp_sm83/: Cargo.toml
platform/desktop/: Cargo.toml
platform/dev/: Cargo.toml
utils/src/: lib.rs
(+8 files in other folders)
