[package]
name = "core"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror = "2.0.11"
utils = { path = "../utils" }
bitfields = "0.12.4"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
serde_repr = "0.1.20"

[lib]
doctest = false #doc test for thiserror are acting up 2/23/2024
