[package]
name = "dev"
version = "0.1.0"
edition = "2024"

[dependencies]
ironboyadvance_core = { path = "../../crates/ironboyadvance_core" }
clap = { version = "4.5.23", features = ["derive"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
thiserror = { workspace = true }
getset = { workspace = true }
sdl2 = { version = "0.38.0", features = ["image", "ttf"] }
