[package]
name = "ironboyadvance_arm7tdmi"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
serde_repr = "0.1.20"
bitfields = { workspace = true }
getset = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
rayon = "1.10"
