[package]
name = "ironboyadvance_core"
version = "0.1.0"
edition = "2024"

[dependencies]
ironboyadvance_arm7tdmi = { path = "../ironboyadvance_arm7tdmi" }
ironboyadvance_sharp_sm83 = { path = "../ironboyadvance_sharp_sm83" }
thiserror = { workspace = true }
bitfields = { workspace = true }
getset = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

